LU-4228 debugfs: fix swabbing of LMA FID

The LMA lma_self_fid is stored on disk in little-endian order, not
big endian order.

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: I09c3b062efd1d4bec0f29fb10758e73913500c1e