version.h
@@ -7,5 +7,5 @@
  * file may be redistributed under the GNU Public License v2.
  */
 
-#define E2FSPROGS_VERSION "1.42.7.wc1"
-#define E2FSPROGS_DATE "12-Apr-2013"
+#define E2FSPROGS_VERSION "1.42.7.wc2"
+#define E2FSPROGS_DATE "07-Nov-2013"
